Enable XPS support.

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,9 @@ evince (3.3.90-1) UNRELEASED; urgency=low
   * Exclude /usr/lib/nautilus/ and /usr/lib/evince/ from dh_makeshlibs.
   * debian/patches/01_poppler-0.16-compat.patch: Keep evince compiling against
     0.16 so we don't require 0.18. Thanks Pino Toscano for the patch.
+  * Enable XPS support.
 
- -- Michael Biebl <biebl@debian.org>  Thu, 08 Mar 2012 16:18:06 +0100
+ -- Michael Biebl <biebl@debian.org>  Thu, 08 Mar 2012 16:36:11 +0100
 
 evince (3.2.1-1) unstable; urgency=low
 
