Back to UNRELEASED
The symbols file changes depending on the glib version it is built against.
This needs further investigation, so back to UNRELEASED for now.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-evince (3.3.90-1) experimental; urgency=low
+evince (3.3.90-1) UNRELEASED; urgency=low
 
   * New upstream development release.
   * Change section of gir1.2-evince-3.0 to introspection.
