--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (3.3.92-1) UNRELEASED; urgency=low
+
+  * New upstream development release.
+
+ -- Michael Biebl <biebl@debian.org>  Mon, 19 Mar 2012 14:50:02 +0100
+
 evince (3.3.90-1) experimental; urgency=low
 
   * New upstream development release.
