Drop explicit Build-Depends on gir packages.

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,9 @@ evince (3.4.0-1) UNRELEASED; urgency=low
   * New upstream release.
   * Wrap dependencies.
   * Remove obsolete Replaces.
+  * Drop explicit Build-Depends on gir packages.
 
- -- Michael Biebl <biebl@debian.org>  Thu, 19 Apr 2012 14:57:53 +0200
+ -- Michael Biebl <biebl@debian.org>  Thu, 19 Apr 2012 14:59:52 +0200
 
 evince (3.3.90-1) experimental; urgency=low
 
