--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-evince (3.4.0-1) UNRELEASED; urgency=low
+evince (3.4.0-1) unstable; urgency=low
 
   * New upstream release.
   * Wrap dependencies.
@@ -12,7 +12,7 @@ evince (3.4.0-1) UNRELEASED; urgency=low
     We still keep a single -dev and gir package for convenience sake.
   * Mention support for XPS documents in the package description.
 
- -- Michael Biebl <biebl@debian.org>  Thu, 19 Apr 2012 15:22:00 +0200
+ -- Michael Biebl <biebl@debian.org>  Thu, 19 Apr 2012 15:22:50 +0200
 
 evince (3.3.90-1) experimental; urgency=low
 
