--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-evince (3.4.0-2) UNRELEASED; urgency=low
+evince (3.4.0-2) unstable; urgency=low
 
   * Upload to unstable.
 
- -- Michael Biebl <biebl@debian.org>  Tue, 15 May 2012 14:35:15 +0200
+ -- Michael Biebl <biebl@debian.org>  Tue, 15 May 2012 14:35:31 +0200
 
 evince (3.4.0-1) experimental; urgency=low
 
