--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (3.4.0-3) UNRELEASED; urgency=low
+
+  * Build with all hardening flags. Closes: #678995.
+
+ -- Josselin Mouette <joss@debian.org>  Mon, 25 Jun 2012 19:17:35 +0200
+
 evince (3.4.0-2) unstable; urgency=low
 
   * Upload to unstable.
