* Fix typo in package description * Have libevdocument3-4 break/replace libevince3-3 too (LP: #1018543)

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,10 @@ evince (3.4.0-3) UNRELEASED; urgency=low
   [ Michael Biebl ]
   * Build against poppler 0.18.
 
+  [ Jeremy Bicha ]
+  * Fix typo in package description
+  * Have libevdocument3-4 break/replace libevince3-3 too (LP: #1018543)
+
  -- Michael Biebl <biebl@debian.org>  Tue, 26 Jun 2012 15:26:59 +0200
 
 evince (3.4.0-2) unstable; urgency=low
