New upstream release

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,8 @@
-evince (3.4.0-4) UNRELEASED; urgency=low
+evince (3.6.1-1) UNRELEASED; urgency=low
 
   * Team upload.
   * debian/patches/03_nodisplay.patch: add upstream and Debian bug references
+  * New upstream release
 
  -- Simon McVittie <smcv@debian.org>  Mon, 22 Oct 2012 18:36:32 +0100
 
