--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ evince (3.6.1-1) UNRELEASED; urgency=low
   * New upstream release
     - update symbols files, dropping some removed private symbols
     - update build-dependencies
+    - help is now in yelp format
 
  -- Simon McVittie <smcv@debian.org>  Mon, 22 Oct 2012 18:36:32 +0100
 
