--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-evince (3.6.1-1) UNRELEASED; urgency=low
+evince (3.6.1-1) experimental; urgency=low
 
   * Team upload.
   * debian/patches/03_nodisplay.patch: add upstream and Debian bug references
@@ -7,7 +7,7 @@ evince (3.6.1-1) UNRELEASED; urgency=low
     - update build-dependencies
     - help is now in yelp format
 
- -- Simon McVittie <smcv@debian.org>  Mon, 22 Oct 2012 18:36:32 +0100
+ -- Simon McVittie <smcv@debian.org>  Mon, 22 Oct 2012 18:47:56 +0100
 
 evince (3.4.0-3) unstable; urgency=low
 
