--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (3.6.1-2) UNRELEASED; urgency=low
+
+  * Finally remove evince.mime for good.
+
+ -- Josselin Mouette <joss@debian.org>  Sat, 17 Nov 2012 14:38:53 +0100
+
 evince (3.6.1-1) experimental; urgency=low
 
   * Team upload.
