--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-evince (3.8.0-1) UNRELEASED; urgency=low
+evince (3.8.0-1) experimental; urgency=low
 
   * New upstream release.
     + debian/patches/03_nodisplay.patch:
       - Dropped, included upstream.
 
- -- Emilio Pozuelo Monfort <pochu@debian.org>  Thu, 28 Mar 2013 22:21:21 +0100
+ -- Emilio Pozuelo Monfort <pochu@debian.org>  Thu, 28 Mar 2013 23:42:03 +0100
 
 evince (3.7.90-1) experimental; urgency=low
 
