--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (3.8.2-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Emilio Pozuelo Monfort <pochu@debian.org>  Sun, 02 Jun 2013 19:17:30 +0200
+
 evince (3.8.0-1) experimental; urgency=low
 
   * New upstream release.
