--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ evince (3.8.2-1) UNRELEASED; urgency=low
     + Install the xpm icon from debian/rules.
   * debian/rules:
     + Take advantage of CDBS' flavor support.
+    + Drop --disable-scrollkeeper, no longer used.
 
  -- Emilio Pozuelo Monfort <pochu@debian.org>  Sun, 02 Jun 2013 19:17:30 +0200
 
