--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ evince (3.8.2-1) UNRELEASED; urgency=low
     + Drop --disable-scrollkeeper, no longer used.
     + No need to remove /usr/share/gtk-doc from evince-common, we're
       not installing it in the first place.
+    + Include utils.mk
 
  -- Emilio Pozuelo Monfort <pochu@debian.org>  Sun, 02 Jun 2013 19:17:30 +0200
 
