--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,10 @@ evince (3.8.2-1) UNRELEASED; urgency=low
     + No need to remove /usr/share/gtk-doc from evince-common, we're
       not installing it in the first place.
     + Include utils.mk
+  * debian/evince-gtk.install,
+    debian/rules:
+    + Install what we need for evince-gtk from the install file
+      instead of installing everything and then removing various bits.
 
  -- Emilio Pozuelo Monfort <pochu@debian.org>  Sun, 02 Jun 2013 19:17:30 +0200
 
