--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (3.8.3-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Michael Biebl <biebl@debian.org>  Wed, 28 Aug 2013 01:36:08 +0200
+
 evince (3.8.2-1) experimental; urgency=low
 
   * New upstream release.
