debian/patches/01-poppler-0.18-compat.patch: Make it possible to compile evince against poppler 0.18 since unstable doesn't have 0.20 yet.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ evince (3.8.3-1) UNRELEASED; urgency=low
 
   * New upstream release.
   * Bump Standards-Version to 3.9.4. No further changes.
+  * debian/patches/01-poppler-0.18-compat.patch: Make it possible to compile
+    evince against poppler 0.18 since unstable doesn't have 0.20 yet.
 
  -- Michael Biebl <biebl@debian.org>  Wed, 28 Aug 2013 01:36:08 +0200
 
