--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ evince (3.8.3-1) UNRELEASED; urgency=low
   * Bump Standards-Version to 3.9.4. No further changes.
   * debian/patches/01-poppler-0.18-compat.patch: Make it possible to compile
     evince against poppler 0.18 since unstable doesn't have 0.20 yet.
+  * Lower the Build-Depends on libpoppler-glib-dev to (>= 0.18.0) again for
+    now.
 
  -- Michael Biebl <biebl@debian.org>  Wed, 28 Aug 2013 01:36:08 +0200
 
