--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (3.10.0-2) unstable; urgency=medium
+
+  * Remove t1lib dependency (Closes: #638759)
+
+ -- Andreas Henriksson <andreas@fatal.se>  Fri, 17 Jan 2014 22:35:24 +0100
+
 evince (3.10.0-1) unstable; urgency=low
 
   * New upstream release.
