--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (3.12.0-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ -- Andreas Henriksson <andreas@fatal.se>  Tue, 25 Mar 2014 21:04:58 +0100
+
 evince (3.11.90-1) experimental; urgency=medium
 
   [ Emilio Pozuelo Monfort ]
