--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+evince (3.12.1-1) unstable; urgency=medium
+
+  * New upstream release
+  * debian/libevview3-3.symbols: Updated
+
+ -- Sjoerd Simons <sjoerd@debian.org>  Sat, 26 Apr 2014 16:39:37 +0200
+
 evince (3.12.0-1) unstable; urgency=medium
 
   * New upstream release.
