--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+evince (3.12.2-1) unstable; urgency=medium
+
+  * New upstream release.
+  * Update debian/libevview3-3.symbols with one addition.
+
+ -- Andreas Henriksson <andreas@fatal.se>  Thu, 28 Aug 2014 15:59:23 -0700
+
 evince (3.12.1-1) unstable; urgency=medium
 
   * New upstream release
