--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+evince (3.14.0-2) unstable; urgency=medium
+
+  * Add debian/patches/git_keep-ref-on-doc.patch (Closes: #763138)
+    - from upstream git, fixes reference counting and thus crashes.
+
+ -- Andreas Henriksson <andreas@fatal.se>  Sun, 28 Sep 2014 11:38:11 +0200
+
 evince (3.14.0-1) unstable; urgency=medium
 
   * New upstream release.
