--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (3.14.1-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Michael Biebl <biebl@debian.org>  Wed, 15 Oct 2014 22:28:17 +0200
+
 evince (3.14.0-2) unstable; urgency=medium
 
   * Add debian/patches/git_keep-ref-on-doc.patch (Closes: #763138)
