--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ evince (3.14.1-1) UNRELEASED; urgency=medium
     enough version now.
   * Drop git_keep-ref-on-doc.patch, merged upstream.
   * Bump Build-Depends on libpoppler-glib-dev to (>= 0.24.0).
+  * Update Homepage URL.
 
  -- Michael Biebl <biebl@debian.org>  Wed, 15 Oct 2014 22:28:17 +0200
 
