--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-evince (3.14.1-1) UNRELEASED; urgency=medium
+evince (3.14.1-1) unstable; urgency=medium
 
   * New upstream release.
   * Drop patches to build against older poppler versions since we have a new
@@ -8,7 +8,7 @@ evince (3.14.1-1) UNRELEASED; urgency=medium
   * Update Homepage URL.
   * Bump Standards-Version to 3.9.6. No further changes.
 
- -- Michael Biebl <biebl@debian.org>  Wed, 15 Oct 2014 22:28:17 +0200
+ -- Michael Biebl <biebl@debian.org>  Wed, 15 Oct 2014 23:12:08 +0200
 
 evince (3.14.0-2) unstable; urgency=medium
 
