--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+evince (3.14.1-2) UNRELEASED; urgency=medium
+
+  * Team upload.
+
+  [ Chris Kuehl ]
+  * Add debian/patches/revert-69b474fce1.patch (Closes: #768133)
+    - from upstream git, reverts commit which broke landscape printing
+
+ -- Simon McVittie <smcv@debian.org>  Fri, 06 Mar 2015 08:31:17 +0000
+
 evince (3.14.1-1) unstable; urgency=medium
 
   * New upstream release.
