--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+evince (3.14.2-1) unstable; urgency=medium
+
+  * New upstream release.
+    - includes many bugfixes among others:
+      "Correctly scroll to the search result ..." (Closes: #742761)
+  * Drop debian/patches/revert-69b474fce1.patch
+    - now include in upstream release.
+
+ -- Andreas Henriksson <andreas@fatal.se>  Wed, 17 Jun 2015 16:32:31 +0200
+
 evince (3.14.1-2) unstable; urgency=medium
 
   * Team upload.
