--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-evince (3.14.1-3) UNRELEASED; urgency=medium
+evince (3.14.2-2) UNRELEASED; urgency=medium
 
   * Team upload.
   * Build only the full-flavored variant of Evince (Closes: #755071).
@@ -12,6 +12,16 @@ evince (3.14.1-3) UNRELEASED; urgency=medium
     unnecessary dependencies.
 
  -- Fabian Greffrath <fabian@debian.org>  Tue, 19 May 2015 17:19:59 +0200
+
+evince (3.14.2-1) unstable; urgency=medium
+
+  * New upstream release.
+    - includes many bugfixes among others:
+      "Correctly scroll to the search result ..." (Closes: #742761)
+  * Drop debian/patches/revert-69b474fce1.patch
+    - now include in upstream release.
+
+ -- Andreas Henriksson <andreas@fatal.se>  Wed, 17 Jun 2015 16:32:31 +0200
 
 evince (3.14.1-2) unstable; urgency=medium
 
