--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 evince (3.14.2-2) UNRELEASED; urgency=medium
 
+  [ Fabian Greffrath ]
   * Team upload.
   * Build only the full-flavored variant of Evince (Closes: #755071).
     + Disable building of the evince-gtk flavor.
@@ -10,6 +11,9 @@ evince (3.14.2-2) UNRELEASED; urgency=medium
       the infamous dependency on libnautilus*.
   * Append "-Wl,--as-needed -Wl,-z,defs" to LDFLAGS to avoid more
     unnecessary dependencies.
+
+  [ Michael Biebl ]
+  * Remove leftover bits from the flavors build which are no longer necessary.
 
  -- Fabian Greffrath <fabian@debian.org>  Tue, 19 May 2015 17:19:59 +0200
 
