--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,7 @@ evince (3.16.1-1) UNRELEASED; urgency=medium
   * Remove leftover bits from the flavors build which are no longer necessary.
   * New upstream release.
   * Drop obsolete Breaks/Replaces from pre-wheezy.
+  * Update debian/libevdocument3-4.symbols, add new symbols.
 
  -- Fabian Greffrath <fabian@debian.org>  Tue, 19 May 2015 17:19:59 +0200
 
