--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,7 @@ evince (3.16.1-1) UNRELEASED; urgency=medium
   * Drop obsolete Breaks/Replaces from pre-wheezy.
   * Update debian/libevdocument3-4.symbols, add new symbols.
   * Install AppData files.
+  * Bump debhelper compatibility level to 9.
 
  -- Fabian Greffrath <fabian@debian.org>  Tue, 19 May 2015 17:19:59 +0200
 
