--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,8 @@ evince (3.16.1-1) UNRELEASED; urgency=medium
   * Update debian/libevdocument3-4.symbols, add new symbols.
   * Install AppData files.
   * Bump debhelper compatibility level to 9.
+  * Bump Build-Depends on libgtk-3-dev to (>= 3.15.3) as per configure.ac.
+  * Drop Build-Depends on gnome-icon-theme, no longer needed.
 
  -- Fabian Greffrath <fabian@debian.org>  Tue, 19 May 2015 17:19:59 +0200
 
