--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-evince (3.16.1-1) UNRELEASED; urgency=medium
+evince (3.16.1-1) unstable; urgency=medium
 
   [ Fabian Greffrath ]
   * Build only the full-flavored variant of Evince (Closes: #755071).
@@ -21,7 +21,7 @@ evince (3.16.1-1) UNRELEASED; urgency=medium
   * Bump Build-Depends on libgtk-3-dev to (>= 3.15.3) as per configure.ac.
   * Drop Build-Depends on gnome-icon-theme, no longer needed.
 
- -- Fabian Greffrath <fabian@debian.org>  Tue, 19 May 2015 17:19:59 +0200
+ -- Michael Biebl <biebl@debian.org>  Wed, 24 Jun 2015 23:40:06 +0200
 
 evince (3.14.2-1) unstable; urgency=medium
 
