--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (3.16.1-2) UNRELEASED; urgency=medium
+
+  * Remove Debian menu entry.
+
+ -- Josselin Mouette <joss@debian.org>  Fri, 04 Sep 2015 09:28:26 +0200
+
 evince (3.16.1-1) unstable; urgency=medium
 
   [ Fabian Greffrath ]
