--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,19 @@
-evince (3.16.1-2) UNRELEASED; urgency=medium
+evince (3.18.0-1) unstable; urgency=medium
 
+  [ Josselin Mouette ]
   * Remove Debian menu entry.
 
- -- Josselin Mouette <joss@debian.org>  Fri, 04 Sep 2015 09:28:26 +0200
+  [ Andreas Henriksson ]
+  * New upstream release.
+  * Update build-dependencies according to configure.ac changes:
+    - bump gtk+ to >= 3.16.0
+    - add gstreamer and gstreamer-plugins-base to opt into multimedia support.
+  * Drop debian/rules snippet for installing evince.xpm
+    - the XPM was removed together with the Debian menu entry.
+  * Update debian/libevdocument3-4.symbols with several additions.
+  * Update debian/libevview3-3.symbols with several additions.
+
+ -- Andreas Henriksson <andreas@fatal.se>  Thu, 24 Sep 2015 12:35:56 +0200
 
 evince (3.16.1-1) unstable; urgency=medium
 
