--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+evince (3.18.0-2) UNRELEASED; urgency=medium
+
+  * libevview3-3: depend on gstreamer0.10-plugins-base
+    - for playbin plugin
+
+ -- Andreas Henriksson <andreas@fatal.se>  Thu, 24 Sep 2015 12:59:25 +0200
+
 evince (3.18.0-1) unstable; urgency=medium
 
   [ Josselin Mouette ]
