--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (3.18.2-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Michael Biebl <biebl@debian.org>  Thu, 12 Nov 2015 14:36:46 +0100
+
 evince (3.18.1-1) unstable; urgency=medium
 
   [ Andreas Henriksson ]
