--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (3.20.0-2) UNRELEASED; urgency=medium
+
+  * Bump Standards-Version to 3.9.7
+
+ -- Andreas Henriksson <andreas@fatal.se>  Fri, 25 Mar 2016 08:09:45 +0100
+
 evince (3.20.0-1) unstable; urgency=medium
 
   * New upstream release.
