--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
 evince (3.20.0-2) UNRELEASED; urgency=medium
 
+  [ Andreas Henriksson ]
   * Bump Standards-Version to 3.9.7
 
- -- Andreas Henriksson <andreas@fatal.se>  Fri, 25 Mar 2016 08:09:45 +0100
+  [ Laurent Bigonville ]
+  * debian/evince-common.install: Install evince.service systemd file
+  * debian/control.in: Add libgnome-desktop-3-dev to the build-dependency to
+    enable 
+
+ -- Laurent Bigonville <bigon@debian.org>  Mon, 11 Apr 2016 13:04:03 +0200
 
 evince (3.20.0-1) unstable; urgency=medium
 
