--- a/debian/changelog
+++ b/debian/changelog
@@ -11,14 +11,17 @@ evince (3.20.0-2) UNRELEASED; urgency=medium
     - Drop evince-dbg package and rely on automatically built dbgsym packages
     - Fix typos (Closes: #673236, #620517)
     - Bump gtk-doc-tools build-dependency to 1.13 (Closes: #554780)
+    - Drop dependency against gnome-icon-theme-symbolic, it's deprecated and
+      replaced by the adwaita theme (Closes: #496250)
   * Add a manpage for evince-previewer, thanks to Mattia Rizzolo and Tomasz
     Buchert (Closes: #762530)
   * debian/evince-gtk.lintian-overrides: Readd lintian override for
     versionless GPL for evince-gtk package until we drop it completely.
   * Move the manpages and the .desktop, icons, appdata, dconf, dbus/systemd
     files from the -common package to the main one.
+  * Run wrap-and-sort script
 
- -- Laurent Bigonville <bigon@debian.org>  Mon, 11 Apr 2016 15:47:01 +0200
+ -- Laurent Bigonville <bigon@debian.org>  Mon, 11 Apr 2016 18:01:42 +0200
 
 evince (3.20.0-1) unstable; urgency=medium
 
