--- a/debian/changelog
+++ b/debian/changelog
@@ -20,8 +20,10 @@ evince (3.20.0-2) UNRELEASED; urgency=medium
   * Move the manpages and the .desktop, icons, appdata, dconf, dbus/systemd
     files from the -common package to the main one.
   * Run wrap-and-sort script
+  * Install apparmor profiles and apport hook, both coming from Ubuntu, thanks
+    to them.
 
- -- Laurent Bigonville <bigon@debian.org>  Mon, 11 Apr 2016 18:01:42 +0200
+ -- Laurent Bigonville <bigon@debian.org>  Mon, 11 Apr 2016 18:39:03 +0200
 
 evince (3.20.0-1) unstable; urgency=medium
 
