--- a/debian/changelog
+++ b/debian/changelog
@@ -23,8 +23,9 @@ evince (3.20.0-2) UNRELEASED; urgency=medium
   * Run wrap-and-sort script
   * Install apparmor profiles and apport hook, both coming from Ubuntu, thanks
     to them.
+  * Convert to multi-arch
 
- -- Laurent Bigonville <bigon@debian.org>  Mon, 11 Apr 2016 19:49:32 +0200
+ -- Laurent Bigonville <bigon@debian.org>  Mon, 11 Apr 2016 20:15:33 +0200
 
 evince (3.20.0-1) unstable; urgency=medium
 
