--- a/debian/changelog
+++ b/debian/changelog
@@ -24,8 +24,10 @@ evince (3.20.0-2) UNRELEASED; urgency=medium
   * Install apparmor profiles and apport hook, both coming from Ubuntu, thanks
     to them.
   * Convert to multi-arch
+  * Add browser-plugin-evince package to ship evince browser plugin
+  * debian/rules: Pass --as-needed to dh_autoreconf
 
- -- Laurent Bigonville <bigon@debian.org>  Mon, 11 Apr 2016 20:15:33 +0200
+ -- Laurent Bigonville <bigon@debian.org>  Wed, 13 Apr 2016 12:50:17 +0200
 
 evince (3.20.0-1) unstable; urgency=medium
 
