--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-evince (3.20.0-2) UNRELEASED; urgency=medium
+evince (3.20.0-2) unstable; urgency=medium
 
   [ Andreas Henriksson ]
   * Bump Standards-Version to 3.9.7
@@ -27,7 +27,7 @@ evince (3.20.0-2) UNRELEASED; urgency=medium
   * Add browser-plugin-evince package to ship evince browser plugin
   * debian/rules: Pass --as-needed to dh_autoreconf
 
- -- Laurent Bigonville <bigon@debian.org>  Wed, 13 Apr 2016 12:50:17 +0200
+ -- Laurent Bigonville <bigon@debian.org>  Fri, 22 Apr 2016 17:30:38 +0200
 
 evince (3.20.0-1) unstable; urgency=medium
 
