--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+evince (3.20.0-3) unstable; urgency=medium
+
+  * debian/control.in: Add Breaks/Replaces against apparmor-profiles-extra
+    (<< 1.7) (Closes: #822676)
+
+ -- Laurent Bigonville <bigon@debian.org>  Tue, 26 Apr 2016 21:03:42 +0200
+
 evince (3.20.0-2) unstable; urgency=medium
 
   [ Andreas Henriksson ]
