--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (3.20.1-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Michael Biebl <biebl@debian.org>  Thu, 23 Jun 2016 23:57:22 +0200
+
 evince (3.20.0-4) unstable; urgency=medium
 
   [ Jeremy Bicha ]
