--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-evince (3.20.1-1) UNRELEASED; urgency=medium
+evince (3.20.1-1) unstable; urgency=medium
 
   * New upstream release.
   * Refresh patches, drop those which have been applied upstream.
@@ -6,7 +6,7 @@ evince (3.20.1-1) UNRELEASED; urgency=medium
   * Bump Standards-Version to 3.9.8.
   * Use --list-missing to show uninstalled files.
 
- -- Michael Biebl <biebl@debian.org>  Thu, 23 Jun 2016 23:57:22 +0200
+ -- Michael Biebl <biebl@debian.org>  Fri, 24 Jun 2016 00:43:39 +0200
 
 evince (3.20.0-4) unstable; urgency=medium
 
