--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (3.21.4-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Michael Biebl <biebl@debian.org>  Sat, 03 Sep 2016 19:38:24 +0200
+
 evince (3.20.1-1) unstable; urgency=medium
 
   * New upstream release.
