--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ evince (3.21.4-1) UNRELEASED; urgency=medium
 
   * New upstream release.
   * Refresh debian/patches/01_nautilus_extension_path.patch.
+  * Use Recommends: default-dbus-session-bus | dbus-session-bus instead of
+    Recommends: dbus-x11. (Closes: #835879)
 
  -- Michael Biebl <biebl@debian.org>  Sat, 03 Sep 2016 19:38:24 +0200
 
