--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (3.21.92-1) UNRELEASED; urgency=medium
+
+  * New upstream development release.
+
+ -- Michael Biebl <biebl@debian.org>  Wed, 14 Sep 2016 19:28:56 +0200
+
 evince (3.21.4-1) unstable; urgency=medium
 
   * New upstream release.
