--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (3.22.0-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Michael Biebl <biebl@debian.org>  Tue, 20 Sep 2016 21:35:17 +0200
+
 evince (3.21.92-1) unstable; urgency=medium
 
   * New upstream development release.
