--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-evince (3.22.0-1) UNRELEASED; urgency=medium
+evince (3.22.0-1) unstable; urgency=medium
 
   * New upstream release.
   * Drop override for dh_shlibdeps. We want to enforce proper shlibs
     dependencies so we have a recent enough version of nautilus with support
     for multiarch paths.
 
- -- Michael Biebl <biebl@debian.org>  Tue, 20 Sep 2016 21:35:17 +0200
+ -- Michael Biebl <biebl@debian.org>  Tue, 20 Sep 2016 22:21:16 +0200
 
 evince (3.21.92-1) unstable; urgency=medium
 
