--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-evince (3.22.1-1) UNRELEASED; urgency=medium
+evince (3.22.1-1) unstable; urgency=medium
 
   * New upstream release.
 
- -- Michael Biebl <biebl@debian.org>  Wed, 12 Oct 2016 14:58:32 +0200
+ -- Michael Biebl <biebl@debian.org>  Wed, 12 Oct 2016 15:21:41 +0200
 
 evince (3.22.0-1) unstable; urgency=medium
 
