--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (3.22.1-2) UNRELEASED; urgency=medium
+
+  * Run "wrap-and-sort -a".
+
+ -- Michael Biebl <biebl@debian.org>  Sun, 16 Oct 2016 22:38:32 +0200
+
 evince (3.22.1-1) unstable; urgency=medium
 
   * New upstream release.
