--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-evince (3.22.1-2) UNRELEASED; urgency=medium
+evince (3.22.1-2) unstable; urgency=medium
 
   * Run "wrap-and-sort -a".
   * Change Suggests: nautilus into Enhances: nautilus. The nautilus extension
@@ -7,7 +7,7 @@ evince (3.22.1-2) UNRELEASED; urgency=medium
   * Add Suggests: nautilus-sendto. It is required by the "Send To …" file menu
     entry. (Closes: #723071)
 
- -- Michael Biebl <biebl@debian.org>  Sun, 16 Oct 2016 22:38:32 +0200
+ -- Michael Biebl <biebl@debian.org>  Sun, 16 Oct 2016 22:46:57 +0200
 
 evince (3.22.1-1) unstable; urgency=medium
 
