--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-evince (3.22.1-3) UNRELEASED; urgency=medium
+evince (3.22.1-3) unstable; urgency=medium
 
   * Update AppArmor policy to support merged-/usr systems. (Closes: #846966)
 
- -- Michael Biebl <biebl@debian.org>  Mon, 19 Dec 2016 18:54:47 +0100
+ -- Michael Biebl <biebl@debian.org>  Mon, 19 Dec 2016 18:56:36 +0100
 
 evince (3.22.1-2) unstable; urgency=medium
 
