Drop comics-Remove-support-for-tar-and-tar-like-commands.patch: applied

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ evince (3.24.1-1) UNRELEASED; urgency=medium
   * New upstream release
   * debian/control.in:
     - Build-depend on libarchive-dev and libgdk-pixbuf2.0-dev
+  * Drop comics-Remove-support-for-tar-and-tar-like-commands.patch:
+    Applied in new release
 
  -- Laurent Bigonville <bigon@debian.org>  Thu, 13 Jul 2017 16:38:04 +0200
 
