--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+evince (3.24.1-2) UNRELEASED; urgency=medium
+
+  * 3.25.91+ fails to build on some architectures:
+    https://bugzilla.gnome.org/787086
+
+ -- Jeremy Bicha <jbicha@debian.org>  Thu, 31 Aug 2017 10:01:37 -0400
+
 evince (3.24.1-1) unstable; urgency=medium
 
   [ Laurent Bigonville ]
