--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-evince (3.25.92-1) UNRELEASED; urgency=medium
+evince (3.25.92-1) unstable; urgency=medium
 
   * New upstream release
   * debian/libevdocument3-4.symbols: add new symbols
@@ -6,7 +6,7 @@ evince (3.25.92-1) UNRELEASED; urgency=medium
     - traditional_menu_bar.patch
     - unity_normal_titlebar.patch
 
- -- Jeremy Bicha <jbicha@debian.org>  Wed, 06 Sep 2017 07:54:48 -0400
+ -- Jeremy Bicha <jbicha@debian.org>  Wed, 06 Sep 2017 22:29:52 -0400
 
 evince (3.24.1-1) unstable; urgency=medium
 
