--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+evince (3.26.0-1) unstable; urgency=medium
+
+  * New upstream release
+  * debian/control.in: Bump Standards-Version to 4.1.1 (no further changes)
+
+ -- Laurent Bigonville <bigon@debian.org>  Wed, 04 Oct 2017 21:22:19 +0200
+
 evince (3.25.92-1) unstable; urgency=medium
 
   * New upstream release
