--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (3.26.0-2) UNRELEASED; urgency=medium
+
+  * Drop obsolete evince-gtk transitional package.
+
+ -- Michael Biebl <biebl@debian.org>  Wed, 04 Oct 2017 23:43:55 +0200
+
 evince (3.26.0-1) unstable; urgency=medium
 
   * New upstream release
