--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,14 @@
 evince (3.26.0-2) UNRELEASED; urgency=medium
 
+  [ Michael Biebl ]
   * Drop obsolete evince-gtk transitional package.
+
+  [ Simon McVittie ]
+  * Replace gir1.2-evince-3.0 Provides on gir1.2-evince-document-3.0 and
+    gir1.2-evince-view-3.0 (which nothing actually seems to depend on)
+    with gir1.2-evincedocument-3.0 and gir1.2-evinceview-3.0
+    (which correspond to the included typelibs). Note that there is no
+    Evince-3.0.typelib.
 
  -- Michael Biebl <biebl@debian.org>  Wed, 04 Oct 2017 23:43:55 +0200
 
