--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,11 @@ evince (3.26.0-2) UNRELEASED; urgency=medium
     (which correspond to the included typelibs). Note that there is no
     Evince-3.0.typelib.
 
+  [ Jeremy Bicha ]
+  * Update Vcs fields for conversion to git
+  * Add debian/gbp.conf
+  * Bump Standards-Version to 4.1.2
+
  -- Michael Biebl <biebl@debian.org>  Wed, 04 Oct 2017 23:43:55 +0200
 
 evince (3.26.0-1) unstable; urgency=medium
