--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-evince (3.26.0-2) UNRELEASED; urgency=medium
+evince (3.26.0-2) unstable; urgency=medium
 
   [ Michael Biebl ]
   * Drop obsolete evince-gtk transitional package.
@@ -15,7 +15,7 @@ evince (3.26.0-2) UNRELEASED; urgency=medium
   * Add debian/gbp.conf
   * Bump Standards-Version to 4.1.2
 
- -- Michael Biebl <biebl@debian.org>  Wed, 04 Oct 2017 23:43:55 +0200
+ -- Jeremy Bicha <jbicha@debian.org>  Wed, 13 Dec 2017 11:56:34 -0500
 
 evince (3.26.0-1) unstable; urgency=medium
 
